@@ -6,7 +6,7 @@
 
     <groupId>io.mosip.resident</groupId>
     <artifactId>resident-parent</artifactId>
-    <version>1.0.6</version>
+    <version>1.1.2</version>
     <packaging>pom</packaging>
     <name>resident</name>
     <description>Parent project of MOSIP Resident</description>
@@ -50,15 +50,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- maven -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.version>3.7.0</maven.compiler.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
         <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-        <maven.surefire.plugin.version>2.9</maven.surefire.plugin.version>
+        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.jacoco.plugin.version>0.8.1</maven.jacoco.plugin.version>
-        <maven.sonar.plugin.version>3.2</maven.sonar.plugin.version>
-        <maven.javadoc.version>3.0.1</maven.javadoc.version>
+        <maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
+        <maven.javadoc.version>3.2.0</maven.javadoc.version>
         <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 
         <!-- spring -->
@@ -90,9 +90,9 @@
 
         <!-- test -->
         <junit.version>4.12</junit.version>
-        <mockito.version>1.10.19</mockito.version>
+        <mockito.version>2.23.4</mockito.version>
         <powermock.version>1.7.4</powermock.version>
-        <powermock.beta.version>2.0.0-beta.5</powermock.beta.version>
+        <powermock.beta.version>2.0.7</powermock.beta.version>
 
         <!-- logger -->
         <logback.version>1.2.3</logback.version>
@@ -117,7 +117,7 @@
         <commons.configuration2.version>2.2</commons.configuration2.version>
         <apache.httpcomponents.version>4.5.6</apache.httpcomponents.version>
         <guava.version>19.0</guava.version>
-        <lombok.version>1.16.18</lombok.version>
+        <lombok.version>1.18.8</lombok.version>
         <jsch.version>0.1.54</jsch.version>
         <sshd.version>1.4.0</sshd.version>
         <itextcore.version>7.1.0</itextcore.version>
@@ -143,9 +143,9 @@
         <apache.directory.api.version>2.0.0.AM2</apache.directory.api.version>
         <google.gson.version>2.8.4</google.gson.version>
         <googlecode.json-simple.version>1.1.1</googlecode.json-simple.version>
-        <powermock.module.junit4.version>2.0.0</powermock.module.junit4.version>
-        <powermock.api.mockito.version>2.0.2</powermock.api.mockito.version>
+        <powermock.beta.version>2.0.7</powermock.beta.version>
         <mockito.version>2.22.0</mockito.version>
+        <io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
 
 
         <sonar.coverage.exclusions>
@@ -170,38 +170,7 @@
             <version>${jcl.to.slf4j.version}</version>
         </dependency>
     </dependencies>
-    <profiles>
-        <profile>
-            <id>LOCAL</id>
-            <properties>
-                <sonar.host.url>
-                    http://104.215.158.154:9000
-                </sonar.host.url>
-                <sonar.login>90903e93f9e6f0e73b5352382e7c51e0a18bfa80</sonar.login>
-                <sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
-                <sonar.jacoco.reportPaths>
-                    target/jacoco.exec
-                </sonar.jacoco.reportPaths>
-            </properties>
-        </profile>
-        <profile>
-            <id>DEV</id>
-            <properties>
-                <sonar.host.url>
-                    http://104.215.158.154:9000
-                </sonar.host.url>
-                <sonar.login>90903e93f9e6f0e73b5352382e7c51e0a18bfa80</sonar.login>
-                <sonar.ws.timeout>90000</sonar.ws.timeout>
-                <sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
-                <sonar.jacoco.reportPaths>
-                    target/jacoco.exec
-                </sonar.jacoco.reportPaths>
-            </properties>
-        </profile>
-    </profiles>
-    <build>
-        <pluginManagement>
-            <plugins>
+    <build> <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -209,26 +178,46 @@
                     <configuration>
                         <skip>false</skip>
                         <useFile>false</useFile>
+                        <argLine>
+							--illegal-access=permit
+						</argLine>
                     </configuration>
                 </plugin>
+                <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${maven.javadoc.version}</version>
+					<executions>
+						<execution>
+					 		<id>attach-javadocs</id>
+					  		<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+                        <doclint>none</doclint>
+                        <additionalJOption>-Xdoclint:none</additionalJOption>
+                	</configuration>
+               </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${maven.jacoco.plugin.version}</version>
                 </plugin>
-                <plugin>
+             <!--   <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
                     <version>${maven.sonar.plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>${maven.javadoc.version}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-        <plugins>
+                    <executions>
+                        <execution>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sonar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>  -->                      
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -258,10 +247,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.7</version>
@@ -269,7 +254,7 @@
                 <configuration>
                     <serverId>ossrh</serverId>
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    <autoReleaseAfterClose>false</autoReleaseAfterClose>
                 </configuration>
             </plugin>
             <plugin>
@@ -306,51 +291,74 @@
                     </archive>
                 </configuration>
             </plugin>
-			<!--                    <plugin>
-                  		<groupId>org.apache.maven.plugins</groupId>
-                  		<artifactId>maven-source-plugin</artifactId>
-                  		<version>2.2.1</version>
-                  		<executions>
-                        		<execution>
-                          			<id>attach-sources</id>
-                          			<goals>
-                                			<goal>jar-no-fork</goal>
-                          			</goals>
-                        		</execution>
-                  		</executions>
-               		</plugin>
-              		<plugin>
-                  		<groupId>org.apache.maven.plugins</groupId>
-                  		<artifactId>maven-javadoc-plugin</artifactId>
-                  		<version>2.9.1</version>
-                  		<executions>
-                        		<execution>
-                          			<id>attach-javadocs</id>
-                          			<goals>
-                                			<goal>jar</goal>
-                          			</goals>
-                        		</execution>
-                  		</executions>
-                  		<configuration>
-                          		<additionalJOption>-Xdoclint:none</additionalJOption>
-                  		</configuration>
-                	</plugin>
-                
-                	<plugin>
-                 	 	<groupId>org.apache.maven.plugins</groupId>
-                  		<artifactId>maven-gpg-plugin</artifactId>
-                  		<version>1.5</version>
-                  		<executions>
-                        		<execution>
-                          			<id>sign-artifacts</id>
-                          			<phase>verify</phase>
-                          			<goals>
-                                			<goal>sign</goal>
-                          			</goals>
-                        		</execution>
-                  		</executions>
-                	</plugin>
--->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>get-the-git-infos</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
+                    </generateGitPropertiesFilename>
+                    <includeOnlyProperties>
+                        <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
+                    </includeOnlyProperties>
+                    <commitIdGenerationMode>full</commitIdGenerationMode>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                    <!-- <format>json</format> -->
+                </configuration>
+            </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
